# nmeaairplane

./: .gitignore  CMakeLists.txt  NMEAGenerator.cpp  NMEAGenerator.hpp  PlanePosition.hpp  PlaneSimulator.cpp  PlaneSimulator.hpp  README.md  main.cpp
